[package]
name = "r2d2-beanstalkd"
version = "0.1.0"
authors = ["Rafael Aggeler <rafael.aggeler@sfts-engineering.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beanstalkc = "1.0.0"
r2d2 = "0.8.9"
thiserror = "1.0.21"