[package]
name = "r2d2-beanstalkd"
description = "Beanstalk support for the r2d2 connection pool"
version = "0.1.0"
authors = ["Rafael Aggeler <r.aggeler@gmx.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beanstalkc = "1.0.0"
r2d2 = "0.8.9"
thiserror = "1.0.21"